@@ -126,6 +126,7 @@ public final class Constants {
       public final static String BEGINNER_MODE = "beginner_mode";
       public final static String SHORTCUTS = "shortcuts";
       public final static String EXPAND_BOTTOM_SHEETS = "expand_bottom_sheets";
+      public final static String SPEED_UP_START = "speed_up_start";
       public final static String START_DESTINATION = "start_destination";
       public final static String QUICK_MODE_CONSUME = "scan_mode_consume_enabled";
       public final static String QUICK_MODE_PURCHASE = "scan_mode_purchase_enabled";
@@ -188,6 +189,7 @@ public final class Constants {
 
       public final static boolean BEGINNER_MODE = true;
       public final static boolean EXPAND_BOTTOM_SHEETS = false;
+      public final static boolean SPEED_UP_START = false;
       public final static boolean QUICK_MODE_CONSUME = false;
       public final static boolean QUICK_MODE_PURCHASE = false;
       public final static boolean QUICK_MODE_SHOPPING_ITEM = false;
