@@ -1,0 +1,31 @@
+<!--
+  ~ This file is part of Grocy Android.
+  ~
+  ~ Grocy Android is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Grocy Android is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Grocy Android. If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (c) 2020-2021 by Patrick Zedler and Dominic Zedler
+  -->
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M19.46,10a1,1 0,0 0,-0.07 1,7.55 7.55,0 0,1 0.52,1.81 8,8 0,0 1,-0.69 4.73,1 1,0 0,1 -0.89,0.53H5.68a1,1 0,0 1,-0.89 -0.54A8,8 0,0 1,13 6.06a7.69,7.69 0,0 1,2.11 0.56,1 1,0 0,0 1,-0.07 1,1 0,0 0,-0.17 -1.76A10,10 0,0 0,3.35 19a2,2 0,0 0,1.72 1h13.85a2,2 0,0 0,1.74 -1,10 10,0 0,0 0.55,-8.89 1,1 0,0 0,-1.75 -0.11z"
+      android:fillColor="@color/icon"/>
+  <path
+      android:pathData="M10.59,12.59a2,2 0,0 0,2.83 2.83l5.66,-8.49z"
+      android:fillColor="@color/icon"/>
+</vector>
