@@ -203,6 +203,36 @@
 
         </LinearLayout>
 
+        <LinearLayout
+          style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Icon.Clickable"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:onClick="@{v -> switchSpeedUpStart.setChecked(!switchSpeedUpStart.isChecked())}">
+
+          <ImageView
+            style="@style/Widget.Grocy.ImageView.ListItem.Icon"
+            tools:ignore="ContentDescription"
+            android:src="@drawable/ic_round_speed" />
+
+          <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
+
+            <TextView
+              style="@style/Widget.Grocy.TextView.ListItem.Title"
+              android:text="@string/setting_speed_up_start" />
+
+            <TextView
+              style="@style/Widget.Grocy.TextView.ListItem.Description"
+              android:text="@string/setting_speed_up_start_description" />
+
+          </LinearLayout>
+
+          <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/switch_speed_up_start"
+            style="@style/Widget.Grocy.Switch"
+            android:checked="@={viewModel.speedUpStartEnabled}" />
+
+        </LinearLayout>
+
       </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
